# despacer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  dub.sdl  run_cmake.ps1  run_cmake.sh
.github/workflows/: CI.yml  ubuntu22.yml  vs.yml
benchmarks/: clock_gettime.h  despacebenchmark.c
bindings/d/: dub.sdl  generate.sh
bindings/d/src/: despacer.d  libc.d  libc.dpp
bindings/d/src/despacer/: simd_check.d
bindings/d/src/despacer/libc/: despacer_AVX2.d  despacer_AVX2.dpp  despacer_SSE4_1.d  despacer_SSE4_1.dpp  despacer_SSE4_2.d  despacer_SSE4_2.dpp  despacer_SSSE3.d  despacer_SSSE3.dpp  despacer_generic.d  despacer_generic.dpp
bindings/d/src/libc/: despacer_AVX2.d  despacer_AVX2.dpp  despacer_SSE4_1.d  despacer_SSE4_1.dpp  despacer_SSE4_2.d  despacer_SSE4_2.dpp  despacer_SSSE3.d  despacer_SSSE3.dpp  despacer_generic.d  despacer_generic.dpp
include/: despacer.h  despacer_AVX2.h  despacer_AVX512.h  despacer_SSE4_1.h  despacer_SSE4_2.h  despacer_SSSE3.h  despacer_generic.h
scripts/: counts.py  mask.py  twosmallmask.py
src/: despacer.c  despacer_tables.h  lib.c
tests/: unit.c
